# candle-store-django

./: .env.example  .gitignore  README.MD  pyproject.toml  requirements.txt  todo.txt
source/: db.sqlite3
source/basket/: context_processors.py  urls.py  utils.py  views.py
source/basket/templates/: admin_order_notification_email.html  basket.html  confirmation_email.html  order_email.html  payment_confirmation.html  payment_confomation.html  stripe_payment.html  user_details.html
source/branding/: admin.py  context_processors.py  models.py
source/branding/migrations/: 0001_initial.py  0002_branding_facebook_link_branding_instagram_link_and_more.py  0003_remove_branding_twitter_link_branding_tiktok_link.py
source/contact/: views.py
source/contact/templates/: contact.html
source/core/: .env  asgi.py  email_utils.py  settings.py  sitemaps.py  urls.py  wsgi.py
source/errors/: views.py
source/errors/migrations/: 0001_initial.py
source/errors/templates/: 403.html
source/home/: admin.py  models.py  urls.py  views.py
source/home/migrations/: 0001_initial.py  0002_alter_homepage_about_image_alter_homepage_hero_image.py  0003_homepage_about_us_page_content.py
source/home/static/: base.css
source/home/templates/: about_us.html  base.html  home.html  policy_page.html  privacy_policy.html  search_results.html  terms_of_service.html
source/orders/: admin.py  emails.py  models.py  services.py  urls.py  webhooks.py
source/products/: admin.py  context_processors.py  models.py  urls.py  views.py
source/seo/: admin.py  context_processors.py  models.py
(+12 files in other folders)
